k8's/service.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "mysite"
  labels:
    app: "mysite"
spec:
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 5000
  selector:
    app: "mysite"
  type: "ClusterIP"
